--- a/mytemplates/index.html
+++ b/mytemplates/index.html
@@ -49,7 +49,8 @@ https://templatemo.com/tm-535-softy-pinko
                             <li><a href="/contest/index/">Contests</a></li>
                             <li><a href="/forum">Community</a></li>
                             <li><a href="/user/myteam/">My team</a></li>
-                            <li><a href="/user/login">Login/Personal page</a></li>
+                            <li><a href="/user/login">Login</a></li>
+                            <li><a href="/personalpage/">PersonalPage</a></li>
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menu</span>
