--- a/mytemplates/personalpage.html
+++ b/mytemplates/personalpage.html
@@ -130,7 +130,7 @@
                       <div class="row">
                         <div class="col-lg-6">
                           <ul>
-                            <li><i class="bi bi-chevron-right"></i> <strong>Graduation:</strong> <span>{{user.graudationtime}}</span></li>
+                            <li><i class="bi bi-chevron-right"></i> <strong>Graduation:</strong> <span>{{user.graduationtime}}</span></li>
                             <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.mysite.com</span></li>
                             <li><i class="bi bi-chevron-right"></i> <strong>Constellation:</strong> <span>Taurus</span></li>
                             <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>HK, China</span></li>
