--- a/mytemplates/ContestSearch.html
+++ b/mytemplates/ContestSearch.html
@@ -154,7 +154,7 @@
                 <div class="news-latest-from-blog__item">
                     <ol class="breadcrumb news-latest-from-blog__item-breadcrumb">
                         <li class="breadcrumb-item">{{row.updated_at}}</li>
-                        <li class="breadcrumb-item"><a href="/forum/column=1/post={{row.id}}/">{{row.column.name}}</a></li>
+                        <li class="breadcrumb-item"><a href="/forum/column={{row.column.id}}/post={{row.id}}/">{{row.column.name}}</a></li>
                         <li class="breadcrumb-item"><a href="/forum/">{{row.responce_times}}</a></li>
                     </ol>
                     <a href="column=11/post=<post_id>/" class="news-latest-from-blog__item-title">{{row.title}}</a>
